# SimCourse

./: .clang-tidy  .gitmodules  CMakeLists.txt  README.md  sim.cc  testgen.py
.github/workflows/: cmake.yml
asmjit_assembly/: CMakeLists.txt  README.md  regfile.ini  sim.cc
inline_assembly/: CMakeLists.txt  README.md  code_fib.hpp  regfile_fib.ini  sim.cc
jit_translator/: CMakeLists.txt  README.md  code.hpp  sim.cc
lecture_02/: sim.cc
lecture_05/: CMakeLists.txt  capsule_asm.hh  sim.cc
lib/: CMakeLists.txt
lib/cpu_state/: CMakeLists.txt
lib/cpu_state/include/sim/: cpu_state.hh
lib/decoder/: CMakeLists.txt  decoder.cc
lib/decoder/include/sim/: decoder.hh
lib/hart/: CMakeLists.txt
lib/hart/include/sim/: hart.hh
lib/isa/: CMakeLists.txt
lib/isa/include/sim/: isa.hh
lib/logger/: CMakeLists.txt
lib/logger/include/sim/: logger.hh
lib/memory/: CMakeLists.txt
lib/memory/include/sim/: memory.hh
lib/timer/: CMakeLists.txt
lib/timer/include/: timer.hh
naive_interpreter/: CMakeLists.txt  README.md  sim.cc
slides/: README.md
test/: CMakeLists.txt  code.hpp  regfile.ini  testgen.py
